--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -80,31 +80,21 @@
     "blog": "Lire le blog"
   },
 
-  "footer": {
-    "rights": "Tous droits réservés.",
-    "madeIn": "Conçu avec passion à Pristina."
-  },
-
   "blog": { "title": "Blog", "empty": "Pas encore d’articles." },
 
-  "admin": {
-    "loginTitle": "Connexion Admin",
-    "invalid": "Identifiants invalides",
-    "title": "Admin — Solvey Labs",
-    "posts": "Articles",
-    "applications": "Candidatures",
-    "contacts": "Contacts",
-    "createPost": "Créer un article",
-    "titleLabel": "Titre",
-    "slug": "Slug",
-    "cover": "URL de couverture (optionnel)",
-    "content": "Contenu",
-    "published": "Publié",
-    "save": "Enregistrer",
-    "delete": "Supprimer",
-    "status": "Statut",
-    "approve": "Approuver",
-    "cv": "CV"
+  "footer": {
+    "tagline": "Nous créons des sites et applications modernes axés sur la performance, la sécurité et un design minimaliste.",
+    "office": "Bureau",
+    "services": "Services",
+    "s_custom": "Développement logiciel sur mesure",
+    "s_web": "Applications Web",
+    "s_mobile": "Applications Mobile",
+    "s_cloud": "Cloud & DevOps",
+    "links": "Liens",
+    "privacy": "Confidentialité",
+    "terms": "Conditions d’utilisation",
+    "rights": "Tous droits réservés.",
+    "madeIn": "Conçu avec passion à Pristina."
   },
 
   "common": { "loading": "Chargement…" }
