padding-x axis in App.jsx

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -93,7 +93,7 @@
     "privacy": "Privacy Policy",
     "terms": "Terms of Use",
     "rights": "All rights reserved.",
-    "madeIn": "Designed with passion in Prishtina.",
+    "madeIn": "Solvey Labs L.L.C",
     "payments": "Payments",
     "weAccept": "",
     "findUs": ""
