--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -99,5 +99,10 @@
     "findUs": ""
   },
 
-  "common": { "loading": "Loading…" }
+  "common": { "loading": "Loading…" },
+
+  "clients":{
+    "title": "Partners & collaborations",
+    "text": "An ecosystem we build and grow with."
+  }
 }
