--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -56,7 +56,7 @@
     "msg": "Short message (optional)",
     "submit": "Submit Application",
     "ok": "Thank you! Your application has been sent.",
-    "teaserTitle": "Join our team",
+    "teaserTitle": "Meet our team",
     "teaserText": "If you love technology and want to grow fast, check our open positions.",
     "viewOpenings": "View openings"
   },
