--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -14,7 +14,7 @@
   "hero": {
     "hi": "Hello, we are",
     "title": "Solvey Labs.",
-    "subtitle": "We build the digital future.",
+    "subtitle": "We build the digital future",
     "tagline": "We build modern websites & apps with a focus on performance, security, and minimalist design.",
     "cta": "Let's start a project!"
   },
