--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -104,6 +104,7 @@
 
   "common": { 
     "loading": "Loading…",
+    "sending": "Sending...",
     "error": "Error",
     "menu": "Menu",
     "logoAlt": "SOLVEY Technology & Software"
